--- a/src/app/survey-component/survey-component.html
+++ b/src/app/survey-component/survey-component.html
@@ -1,13 +1,12 @@
 <ul>
-	<li *ngFor="let criteria of componentList$ | async">
-    
-		<ng-container [ngSwitch]="criteria.kind">
-			<ng-container *ngSwitchCase="'dropdown'">
-				<dropdown-component></dropdown-component>
-			</ng-container>
-			<ng-container *ngSwitchCase="'checkbox'">
-				<checkbox-component></checkbox-component>
-			</ng-container>
-		</ng-container>
-	</li>
+  <li *ngFor="let criteria of componentList$ | async">
+    <ng-container [ngSwitch]="criteria.kind">
+      <ng-container *ngSwitchCase="0">
+        <dropdown-component details="criteria.details"></dropdown-component>
+      </ng-container>
+      <ng-container *ngSwitchCase="1">
+        <checkbox-component details="criteria.details"></checkbox-component>
+      </ng-container>
+    </ng-container>
+  </li>
 </ul>
