--- a/src/app/dropdown-component/dropdown.component.html
+++ b/src/app/dropdown-component/dropdown.component.html
@@ -1,3 +1,5 @@
-dropdown
-<select ng-model="dataSource" ng-options="value for value in dataSource">
-</select>
+<ul>
+  <li *ngFor="let detail of detailsTest">
+    {{detail.id}}
+  </li>
+</ul>
