--- a/src/app/survey-component/survey-component.html
+++ b/src/app/survey-component/survey-component.html
@@ -2,10 +2,10 @@
   <li *ngFor="let criteria of componentList$ | async">
     <ng-container [ngSwitch]="criteria.kind">
       <ng-container *ngSwitchCase="0">
-        <dropdown-component details="criteria.details"></dropdown-component>
+        <dropdown-component [details]="criteria.details"></dropdown-component>
       </ng-container>
       <ng-container *ngSwitchCase="1">
-        <checkbox-component details="criteria.details"></checkbox-component>
+        <checkbox-component [details]="criteria.details"></checkbox-component>
       </ng-container>
     </ng-container>
   </li>
