--- a/src/app/dropdown-component/dropdown.component.html
+++ b/src/app/dropdown-component/dropdown.component.html
@@ -1,5 +1,2 @@
-<ul>
-  <li *ngFor="let detail of detailsTest">
-    {{detail.id}}
-  </li>
-</ul>
+<select ng-model="detailsTest" ng-options="x for x in detailsTest">
+</select>
