--- a/src/app/dropdown-component/dropdown.component.html
+++ b/src/app/dropdown-component/dropdown.component.html
@@ -1,3 +1,3 @@
-<select *ngFor="let detail of detailsTest">
-<option >{{detail.id}}</option>
+<select>
+  <option *ngFor="let detail of details">{{detail.value}}</option>
 </select>
