--- a/src/app/checkbox-component/checkbox.component.html
+++ b/src/app/checkbox-component/checkbox.component.html
@@ -1,2 +1,3 @@
+<h2>{{question}}</h2>
 <label>{{ details[0].label }}</label>
-<input type="checkbox" [checked]="details[0].value" >
+<input type="checkbox" [checked]="details[0].value" />
