--- a/src/app/checkbox-component/checkbox.component.html
+++ b/src/app/checkbox-component/checkbox.component.html
@@ -1,6 +1,6 @@
 <h2>{{question}}</h2>
 
-<ng-template *ngFor="let detail of details">
+<div *ngFor="let detail of details">
 	<label>{{ detail.label }}</label>
 	<input type="checkbox" [checked]="detail.value" />
-</ng-template>
+</div>
