--- a/src/app/checkbox-component/checkbox.component.html
+++ b/src/app/checkbox-component/checkbox.component.html
@@ -2,5 +2,5 @@
 
 <div *ngFor="let detail of details">
 	<label>{{ detail.label }}</label>
-	<mat-checkbox class="example-margin" [checked]="detail.value">Check me!</mat-checkbox>
+	<mat-checkbox class="example-margin" [checked]="true">Check me!</mat-checkbox>
 </div>
