--- a/src/app/checkbox-component/checkbox.component.html
+++ b/src/app/checkbox-component/checkbox.component.html
@@ -1,6 +1,5 @@
 <h2>{{question}}</h2>
 
 <div *ngFor="let detail of details">
-	<label>{{ detail.label }}</label>
-	<mat-checkbox class="example-margin" [checked]="true">Check me!</mat-checkbox>
+	<mat-checkbox class="example-margin" [checked]="true">{{ detail.label }}</mat-checkbox>
 </div>
