--- a/src/app/checkbox-component/checkbox.component.html
+++ b/src/app/checkbox-component/checkbox.component.html
@@ -1,5 +1,5 @@
 <h2>{{question}}</h2>
 
 <div *ngFor="let detail of details$ | async">
-	<mat-checkbox class="example-margin" [checked]="true">{{ detail.label }}</mat-checkbox>
+	<mat-checkbox class="example-margin" [checked]="detail.value">{{ detail.label }}</mat-checkbox>
 </div>
