--- a/src/app/dropdown-component/dropdown.component.html
+++ b/src/app/dropdown-component/dropdown.component.html
@@ -1,7 +1,7 @@
-<h2>{{question}}</h2>
+<!-- <h2>{{question}}</h2>
 
 <mat-select>
 	<mat-option *ngFor="let detail of details" [value]="detail.value">
 		{{detail.value}}
 	</mat-option>
-</mat-select>
+</mat-select> -->
