--- a/src/app/survey-component/survey-component.html
+++ b/src/app/survey-component/survey-component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let criteria of componentList$ | async">
+<!-- <div *ngFor="let criteria of componentList$ | async">
 	<ng-container [ngSwitch]="criteria.kind">
 		<ng-container *ngSwitchCase="0">
 			<dropdown-component [details]="criteria.details" [question]="criteria.question"></dropdown-component>
@@ -7,4 +7,4 @@
 			<checkbox-component [details]="criteria.details" [question]="criteria.question"></checkbox-component>
 		</ng-container>
 	</ng-container>
-</div>
+</div> -->
