--- a/src/app/survey-component/survey-component.html
+++ b/src/app/survey-component/survey-component.html
@@ -8,3 +8,11 @@
 		</ng-container>
 	</ng-container>
 </div> -->
+
+
+<div *ngFor="let survey of driverSurveys$ | async">
+	<h2>Survey:</h2>
+	<div>start date : {{survey.startDate}}</div>
+	<div>end date : {{survey.endDate}}</div>
+	<button>See details</button>
+</div>
