--- a/src/app/survey-component/survey-component.html
+++ b/src/app/survey-component/survey-component.html
@@ -14,5 +14,5 @@
 	<h2>Survey:</h2>
 	<div>start date : {{survey.startDate}}</div>
 	<div>end date : {{survey.endDate}}</div>
-	<button>See details</button>
+	<button (click)="onClick(survey.id)">See details</button>
 </div>
