--- a/src/app/survey-dialog-component/survey-dialog.component.html
+++ b/src/app/survey-dialog-component/survey-dialog.component.html
@@ -1,8 +1,7 @@
-<h1 mat-dialog-title>Hi</h1>
+<h1 mat-dialog-title>Survey</h1>
 <div mat-dialog-content>
-	<p>What's your favorite animal?</p>
-
+	{{data.data}}
 </div>
 <div mat-dialog-actions>
-	<button mat-button>No Thanks</button>
+	<button mat-button (click)="onClose()">Close</button>
 </div>
