--- a/src/app/survey-dialog-component/survey-dialog.component.html
+++ b/src/app/survey-dialog-component/survey-dialog.component.html
@@ -1,6 +1,7 @@
 <h1 mat-dialog-title>Survey</h1>
 <div mat-dialog-content>
-	{{data.data}}
+	<p>Survey id: {{data.id}}</p>
+	
 </div>
 <div mat-dialog-actions>
 	<button mat-button (click)="onClose()">Close</button>
