--- a/src/app/survey-dialog-component/survey-dialog.component.html
+++ b/src/app/survey-dialog-component/survey-dialog.component.html
@@ -1,7 +1,11 @@
 <h1 mat-dialog-title>Survey</h1>
 <div mat-dialog-content>
 	<p>Survey id: {{data.id}}</p>
-	
+	{{data.driver}}
+	{{data.questions}}
+	<div *ngFor="let question of data.questions">
+
+	</div>
 </div>
 <div mat-dialog-actions>
 	<button mat-button (click)="onClose()">Close</button>
