--- a/src/app/min-max-component/min-max.component.html
+++ b/src/app/min-max-component/min-max.component.html
@@ -1,1 +1,5 @@
-1
+<p>{{data.displayName}}</p>
+<mat-form-field>
+	<mat-label>Min</mat-label>
+	<input matInput value="test" placeholder="Ex. Pizza">
+</mat-form-field>
