--- a/src/app/multiple-choice-component/multiple-choice.component.html
+++ b/src/app/multiple-choice-component/multiple-choice.component.html
@@ -1,8 +1,1 @@
-2
-<!-- <h2>{{question}}</h2>
-
-<mat-select>
-	<mat-option *ngFor="let detail of details" [value]="detail.value">
-		{{detail.value}}
-	</mat-option>
-</mat-select> -->
+<p>{{data.displayName}}</p>
