--- a/src/app/survey-dialog-component/survey-dialog.component.html
+++ b/src/app/survey-dialog-component/survey-dialog.component.html
@@ -1,11 +1,8 @@
 <h1 mat-dialog-title>Survey</h1>
 <div mat-dialog-content>
 	<p>Survey id: {{data.id}}</p>
-	<!-- <div *ngFor="let test of formGroup.controls;">
-		{{test}}
-	</div> -->
-	<!-- <form [formGroup]=" formGroup">
-		<mat-horizontal-stepper formArrayName="formArray">
+	<form [formGroup]="formGroup">
+		<mat-horizontal-stepper formArrayName="form">
 			<mat-step [formGroupName]="i" *ngFor="let customerGroup of formGroup.controls.form.controls; let i = index">
 				<ng-template matStepLabel>Step {{i + 1}}</ng-template>
 				<mat-form-field>
@@ -17,7 +14,8 @@
 					</div>
 			</mat-step>
 		</mat-horizontal-stepper>
-	</form> -->
+
+	</form>
 
 
 	<!-- <div *ngFor="let question of data.questions">
