--- a/src/app/survey-dialog-component/survey-dialog.component.html
+++ b/src/app/survey-dialog-component/survey-dialog.component.html
@@ -2,19 +2,19 @@
 <div mat-dialog-content>
 	<p>Survey id: {{data.id}}</p>
 	<form [formGroup]="formGroup">
-		<mat-horizontal-stepper formArrayName="form">
-			<mat-step [formGroupName]="i" *ngFor="let customerGroup of formGroup.controls.form.controls; let i = index">
-				<ng-template matStepLabel>Step {{i + 1}}</ng-template>
-				<mat-form-field>
-					<input matInput placeholder="Address" formControlName="cont" required>
-      </mat-form-field>
-					<div>
-						<button mat-button matStepperPrevious>Back</button>
-						<button mat-button matStepperNext>Next</button>
-					</div>
-			</mat-step>
-		</mat-horizontal-stepper>
 
+
+
+		<div formArrayName="group1">
+			<div *ngFor="let group of group1.controls; let i=index;" [formGroupName]="i">
+				<mat-form-field>
+					<input matInput placeholder="min" formControlName="min">
+        </mat-form-field>
+					<mat-form-field>
+						<input matInput placeholder="max" formControlName="max">
+        </mat-form-field>
+			</div>
+		</div>
 	</form>
 
 
