--- a/src/app/min-max-component/min-max.component.html
+++ b/src/app/min-max-component/min-max.component.html
@@ -1,4 +1,4 @@
-<p>{{data.displayName}}</p>
+<!-- <p>{{data.displayName}}</p>
 <form [formGroup]="minMaxForm">
 	<mat-form-field>
 		<mat-label>Min</mat-label>
@@ -8,4 +8,4 @@
 			<mat-label>Max</mat-label>
 			<input matInput formControlName="max">
 </mat-form-field>
-</form>
+</form> -->
