--- a/src/app/min-max-component/min-max.component.html
+++ b/src/app/min-max-component/min-max.component.html
@@ -1,11 +1,8 @@
-<!-- <p>{{data.displayName}}</p>
-<form [formGroup]="minMaxForm">
+<mat-form-field>
+	<mat-label>min</mat-label>
+	<input matInput formControlName="min">
+</mat-form-field>
 	<mat-form-field>
-		<mat-label>Min</mat-label>
-		<input matInput formControlName="min">
+		<mat-label>max</mat-label>
+		<input matInput formControlName="max">
 </mat-form-field>
-		<mat-form-field>
-			<mat-label>Max</mat-label>
-			<input matInput formControlName="max">
-</mat-form-field>
-</form> -->
