--- a/src/app/min-max-component/min-max.component.html
+++ b/src/app/min-max-component/min-max.component.html
@@ -1,8 +1,10 @@
-<mat-form-field>
-	<mat-label>min</mat-label>
-	<input matInput formControlName="min">
+<div [formGroup]="group">
+	<!-- <mat-form-field>
+		<mat-label>min</mat-label>
+		<input matInput formControlName="min">
 </mat-form-field>
-	<mat-form-field>
-		<mat-label>max</mat-label>
-		<input matInput formControlName="max">
-</mat-form-field>
+		<mat-form-field>
+			<mat-label>max</mat-label>
+			<input matInput formControlName="max">
+</mat-form-field> -->
+</div>
