--- a/src/app/min-max-component/min-max.component.html
+++ b/src/app/min-max-component/min-max.component.html
@@ -1,4 +1,6 @@
 <div [formGroup]="group">
+	{{question.displayName}}
+	<br>
 	<mat-form-field>
 		<mat-label>min</mat-label>
 		<input matInput formControlName="min">
