--- a/src/app/multiple-choice-component/multiple-choice.component.html
+++ b/src/app/multiple-choice-component/multiple-choice.component.html
@@ -1,8 +1,5 @@
-<p>{{data.displayName}}</p>
-<mat-form-field>
-	<mat-select multiple>
-		<mat-option *ngFor="let item of data.values" [value]="item.value">
-			{{item.name}}
-		</mat-option>
-	</mat-select>
-</mat-form-field>
+<div [formGroup]="group">
+	{{question.displayName}}
+	<br>
+
+</div>
