--- a/src/app/multiple-choice-component/multiple-choice.component.html
+++ b/src/app/multiple-choice-component/multiple-choice.component.html
@@ -1,6 +1,10 @@
 <div [formGroup]="group">
 	{{question.displayName}}
 	<br>
-
+	<!-- <mat-select>
+		<mat-option *ngFor="values of group.get('values')" [value]=" detail.value">
+			{{detail.value}}
+		</mat-option>
+	</mat-select>  -->
 
 </div>
