--- a/src/app/multiple-choice-component/multiple-choice.component.html
+++ b/src/app/multiple-choice-component/multiple-choice.component.html
@@ -1,9 +1,10 @@
 <div [formGroup]="group">
 	{{question.displayName}}
 	<br>
-  {{valuesTest | json}}
 	<mat-select formControlName="values" multiple>
-
+		<mat-option *ngFor="let item of possibleValues" value=[item]>
+			{{item.name}}
+		</mat-option>
 	</mat-select>
 
 </div>
