--- a/src/app/multiple-choice-component/multiple-choice.component.html
+++ b/src/app/multiple-choice-component/multiple-choice.component.html
@@ -1,8 +1,8 @@
 <div [formGroup]="group">
 	{{question.displayName}}
 	<br>
-	<mat-select formControlName="values" multiple>
-		<mat-option *ngFor="let item of possibleValues" value=[item]>
+	<mat-select formControlName="choices" multiple>
+		<mat-option *ngFor="let item of values" [value]="item.value">
 			{{item.name}}
 		</mat-option>
 	</mat-select>
